--- a/demo-test/grpc_test/makefile
+++ b/demo-test/grpc_test/makefile
@@ -18,6 +18,7 @@ build: clear proto
 clear:
 	rm -rf ${protocOutDir}
 proto:
+	rm -rf ${protocRunDir}/${protocName}
 	cp -rf ${protocName} ${protocRunDir}
 	cd ${protocRunDir} && protoc --go_out=. --go_opt=paths=source_relative \
         	--go-grpc_out=. --go-grpc_opt=paths=source_relative \
